# maya

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  telemetry.csv
.cargo/: config.toml
crates/ai-runtime/: Cargo.toml
crates/bootloader/: Cargo.toml
crates/kernel/: Cargo.toml  build.rs
crates/kernel-aarch64/: Cargo.toml  aarch64.ld  build.rs
crates/mrt/: Cargo.toml
crates/mrt/src/: fs.rs  (+11 more)
crates/shell/: Cargo.toml
design/sf-symbols/: README.md
docs/: CLAUDE-CONTEXT.md  benchmark_phase12.md  phase10-aarch64-status.md  phase8-smp-status.md  session-handoff.md
paper/: maya-osdi.tex
scripts/: benchmark-compare.py  build-usb.sh  gen-font.py  maya-bridge.py  maya-hud.html  maya-training-data.jsonl  maya-viz.py  run-aarch64.sh
targets/: aarch64-maya.json  x86_64-aios.json
tools/mar/: mar.py  mar_aarch64.py  requirements.txt
tools/train/: generate_and_train.py  maya_train.py
userspace/: hello.asm  hello_asm  yield_test  yield_test.asm
userspace/background_task/: Cargo.toml  background.s  background_task  background_task.mexe  background_task.mlm  background_task.mlmb  background_task.mshm  link.ld  main.rs
userspace/compute_workload/: Cargo.toml  compute.s  compute_workload  compute_workload.mexe  compute_workload.mlm  compute_workload.mlmb  compute_workload.mshm  link.ld  main.rs
userspace/hello_aarch64/: hello.s  hello_aarch64  hello_aarch64.mexe  hello_aarch64.mlm  hello_aarch64.mlmb  hello_aarch64.mshm
userspace/hello_c/: hello.c  hello_c  hello_c.mexe  hello_c.mlm  hello_c.mshm  maya.h  start.asm
userspace/hello_rust/: Cargo.toml
(+197 files in other folders)
